--- a/style.css
+++ b/style.css
@@ -113,6 +113,10 @@ button {
     border-radius: 25px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     cursor: pointer;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .button-add {
@@ -159,4 +163,20 @@ ul {
 
 .button-draw:hover {
     background-color: var(--color-button-hover);
+}
+
+/* Botón de reiniciar juego */
+.button-draw-1 {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 10px 40px;
+    margin: 10px 0;
+    color: var(--color-text);
+    background-color: var(--color-secondary);
+    font-size: 16px;
+}
+
+.button-draw-1:hover {
+    background-color: var(--color-tertiary);
 }
